--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <string name="app_name">SmileEssence Lite</string>
+
+    <string name="key_setting_textSize">keyTextSize</string>
 </resources>
