--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="key_setting_t4j">t4j_info</string>
 
     <string name="key_setting_aftersubmit">after_submit</string>
+
+    <string name="key_setting_delete_accounts">deleteAccounts</string>
 </resources>
