β1.0.1　プレリリース

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="key_setting_delete_accounts">deleteAccounts</string>
 
     <string name="key_setting_notice_unfav">notice_unfav</string>
+
+    <string name="key_setting_open_ime">open_ime</string>
 </resources>
