バグとりと、確認ダイアログ設定つけたりいろいろ。1.3にアップデート

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="key_setting_notice_unfav">notice_unfav</string>
 
     <string name="key_setting_open_ime">open_ime</string>
+
+    <string name="key_setting_confirm_dialog">confirm_dialog</string>
 </resources>
