--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,22 +2,20 @@
 <resources>
 
     <string name="app_name">SmileEssence Lite</string>
-
     <string name="key_setting_textSize">text_size</string>
-
     <string name="key_setting_t4j">t4j_info</string>
-
     <string name="key_setting_aftersubmit">after_submit</string>
-
     <string name="key_setting_delete_accounts">deleteAccounts</string>
-
     <string name="key_setting_notice_unfav">notice_unfav</string>
-
     <string name="key_setting_open_ime">open_ime</string>
-
     <string name="key_setting_confirm_dialog">confirm_dialog</string>
-
     <string name="key_setting_footer">footer_visible</string>
-
     <string name="key_setting_morse">morse_enabled</string>
+    <string name="key_setting_namestyle">namestyle</string>
+    <string name="namestyle_s_n">ScreenName / Name</string>
+    <string name="namestyle_n_s">Name / ScreenName</string>
+    <string name="namestyle_s">ScreenName</string>
+    <string name="namestyle_n">Name</string>
+    <string name="key_setting_extract_to">extract_to</string>
+
 </resources>
