--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string name="app_name">SmileEssence Lite</string>
-    <string name="app_version">β1.4.36</string>
+    <string name="app_version">β1.4.4</string>
+    <string name="app_url">http://smileessence.miz-hi.net/</string>
     <string name="key_setting_textSize">text_size</string>
-    <string name="key_setting_t4j">t4j_info</string>
     <string name="key_setting_aftersubmit">after_submit</string>
     <string name="key_setting_delete_accounts">deleteAccounts</string>
     <string name="key_setting_notice_unfav">notice_unfav</string>
@@ -17,9 +17,7 @@
     <string name="namestyle_n_s">Name / ScreenName</string>
     <string name="namestyle_s">ScreenName</string>
     <string name="namestyle_n">Name</string>
-    <string name="key_setting_extract_to">extract_to</string>
     <string name="key_setting_read_retweet">show_read_retweet</string>
-    <string name="prefrence_app">pref_app</string>
     <string name="key_setting_listload">list_load</string>
-
+    <string name="thanks_to">miz_hi, yaplus</string>
 </resources>
