Implement SettingFragment and setting.xml

--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -31,16 +31,18 @@
     <string name="namestyle_n_s">Name / ScreenName</string>
     <string name="namestyle_s">ScreenName</string>
     <string name="namestyle_n">Name</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_light">Light</string>
     <string name="thanks_to">miz_hi, yaplus</string>
-    <string name="page_name_post">Post</string>
-    <string name="page_name_home">Home</string>
-    <string name="page_name_mentions">Mentions</string>
-    <string name="page_name_messages">Messages</string>
-    <string name="page_name_history">History</string>
-    <string name="actionbar_add">Add page</string>
-    <string name="actionbar_setting">Setting</string>
-    <string name="actionbar_services">Web sites</string>
-    <string name="actionbar_report">Report to author</string>
+    <string name="page_name_post">つぶやく</string>
+    <string name="page_name_home">ホーム</string>
+    <string name="page_name_mentions">メンション</string>
+    <string name="page_name_messages">メッセージ</string>
+    <string name="page_name_history">通知</string>
+    <string name="actionbar_add">ページを追加</string>
+    <string name="actionbar_setting">設定</string>
+    <string name="actionbar_services">外部サイト</string>
+    <string name="actionbar_report">作者に連絡</string>
     <string name="actionbar_favstar">Favstar</string>
     <string name="actionbar_aclog">Aclog</string>
     <string name="actionbar_twilog">Twilog</string>
@@ -52,4 +54,33 @@
     <string name="format_event_blocked">%sからブロックされた</string>
     <string name="format_event_unblocked">%sからブロック解除された</string>
     <string name="format_event_message">%sからのDMを受信</string>
+    <string name="setting_category_display_title">表示設定</string>
+    <string name="setting_category_display_summary">再起動後に有効になります</string>
+    <string name="setting_text_size_title">文字サイズ</string>
+    <string name="setting_text_size_dialog_title">文字サイズの設定</string>
+    <string name="setting_text_size_dialog_message">8から24の間で設定してください</string>
+    <string name="setting_theme_title">テーマ</string>
+    <string name="setting_theme_dialog_title">テーマを選択</string>
+    <string name="setting_namestyle_title">名前の形式</string>
+    <string name="setting_namestyle_dialog_title">名前の形式を選択</string>
+    <string name="setting_read_morse">モールスの解読</string>
+    <string name="setting_category_system_title">システム設定</string>
+    <string name="setting_show_confirm_dialog">確認ダイアログを表示する</string>
+    <string name="setting_back_to_home_title">投稿後にホームに戻る</string>
+    <string name="setting_notify_on_unfavorited_title">あんふぁぼを通知する</string>
+    <string name="setting_search_includes_retweets">検索にリツイートを含める</string>
+    <string name="setting_timelines_title">タイムライン</string>
+    <string name="setting_timelines_summary_format">更新時に新しいツイートを%s件取得する</string>
+    <string name="setting_timelines_dialog_title">取得件数の設定</string>
+    <string name="setting_timelines_dialog_message">1から200の間で設定してください</string>
+    <string name="setting_category_about_title">情報</string>
+    <string name="setting_application_information_title">アプリ情報</string>
+    <string name="setting_licenses_title">ライセンスについて</string>
+    <string name="setting_category_account_title">アカウント</string>
+    <string name="setting_delete_authentication_title">認証情報を削除する</string>
+    <string name="setting_delete_authentication_summary">次回起動時に再認証が必要です</string>
+    <string name="error_setting_text_size_range">8から24の間で設定してください</string>
+    <string name="error_setting_text_size_not_number">数を入力してください</string>
+    <string name="error_setting_timelines_range">1から200の間で設定してください</string>
+    <string name="error_setting_timelines_not_number">数を入力してください</string>
 </resources>
