--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="namestyle_n_s">Name / ScreenName</string>
     <string name="namestyle_s">ScreenName</string>
     <string name="namestyle_n">Name</string>
+    <string name="theme_dark">Dark</string>
+    <string name="theme_light">Light</string>
     <string name="thanks_to">miz_hi, yaplus</string>
     <string name="page_name_post">Post</string>
     <string name="page_name_home">Home</string>
@@ -52,4 +54,33 @@
     <string name="format_event_blocked">Blocked by %s</string>
     <string name="format_event_unblocked">Unblocked by %s</string>
     <string name="format_event_message">Received %s\'s message</string>
+    <string name="setting_category_display_title">Display Setting</string>
+    <string name="setting_category_display_summary">Enable at next launch.</string>
+    <string name="setting_text_size_title">Text size</string>
+    <string name="setting_text_size_dialog_title">Edit text tize</string>
+    <string name="setting_text_size_dialog_message">Set a value between 8\-24</string>
+    <string name="setting_theme_title">Theme</string>
+    <string name="setting_theme_dialog_title">Choose theme</string>
+    <string name="setting_namestyle_title">Name style</string>
+    <string name="setting_namestyle_dialog_title">Choose name style</string>
+    <string name="setting_read_morse">Enable morse</string>
+    <string name="setting_category_system_title">System Setting</string>
+    <string name="setting_show_confirm_dialog">Show confirm dialog</string>
+    <string name="setting_back_to_home_title">Back to Home after posting</string>
+    <string name="setting_notify_on_unfavorited_title">Notify on unfavorited</string>
+    <string name="setting_search_includes_retweets">Search includes retweets</string>
+    <string name="setting_timelines_title">Timelines</string>
+    <string name="setting_timelines_summary_format">Get new %s tweets by refresh</string>
+    <string name="setting_timelines_dialog_title">Edit count</string>
+    <string name="setting_timelines_dialog_message">Set a value between 1\-200</string>
+    <string name="setting_category_about_title">About</string>
+    <string name="setting_delete_authentication_title">Delete authentication</string>
+    <string name="setting_delete_authentication_summary">Please authenticate again on next launch</string>
+    <string name="setting_category_account_title">Account</string>
+    <string name="setting_application_information_title">Application infomation</string>
+    <string name="setting_licenses_title">Licenses</string>
+    <string name="error_setting_text_size_range">Must be between 8\-24</string>
+    <string name="error_setting_text_size_not_number">Given value is not number</string>
+    <string name="error_setting_timelines_range">Must be between 1\-200</string>
+    <string name="error_setting_timelines_not_number">Given value is not number</string>
 </resources>
