--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -98,4 +98,5 @@
     <string name="command_user_reply">Reply</string>
     <string name="command_message_reply">Reply</string>
     <string name="command_event_reply">Reply</string>
+    <string name="post_button_tweet">Tweet</string>
 </resources>
