--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -99,4 +99,5 @@
     <string name="command_message_reply">返信</string>
     <string name="command_event_reply">返信</string>
     <string name="post_button_tweet">つぶやく</string>
+    <string name="command_status_reply_to_all">全員に返信</string>
 </resources>
