--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -99,4 +99,5 @@
     <string name="command_message_reply">Reply</string>
     <string name="command_event_reply">Reply</string>
     <string name="post_button_tweet">Tweet</string>
+    <string name="command_status_reply_to_all">Reply to all</string>
 </resources>
