--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -100,4 +100,7 @@
     <string name="command_event_reply">返信</string>
     <string name="post_button_tweet">つぶやく</string>
     <string name="command_status_reply_to_all">全員に返信</string>
+    <string name="command_status_favorite">Add to favorite</string>
+    <string name="notice_favorite_succeeded">Succeeded to favorite</string>
+    <string name="notice_favorite_failed">Failed to favorite</string>
 </resources>
