Add StatusCommandFavAndRT and refactor commands

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -106,4 +106,5 @@
     <string name="command_status_retweet">Retweet</string>
     <string name="notice_retweet_succeeded">Succeeded to retweet</string>
     <string name="notice_retweet_failed">Failed to retweet</string>
+    <string name="command_status_fav_and_rt">Retweet and favorite</string>
 </resources>
