--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -106,4 +106,5 @@
     <string name="command_status_retweet">リツイート</string>
     <string name="notice_retweet_succeeded">リツイートしました</string>
     <string name="notice_retweet_failed">リツイートに失敗しました</string>
+    <string name="command_status_fav_and_rt">Retweet and favorite</string>
 </resources>
