--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -109,4 +109,5 @@
     <string name="command_status_fav_and_rt">Retweet and favorite</string>
     <string name="command_status_quote">Quote</string>
     <string name="command_status_clipboard">Copy to clipboard</string>
+    <string name="command_status_share">Share...</string>
 </resources>
