--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -110,4 +110,5 @@
     <string name="command_status_quote">Quote</string>
     <string name="command_status_clipboard">Copy to clipboard</string>
     <string name="command_status_share">Share...</string>
+    <string name="command_status_open_in_browser">Open in browser</string>
 </resources>
