--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -122,4 +122,5 @@
     <string name="command_status_delete">削除</string>
     <string name="notice_status_delete_succeeded">削除しました</string>
     <string name="notice_status_delete_failed">削除に失敗しました</string>
+    <string name="command_user_add_to_reply">返信に追加</string>
 </resources>
