--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="command_status_delete">Delete</string>
     <string name="notice_status_delete_succeeded">Succeeded to delete tweet</string>
     <string name="notice_status_delete_failed">Failed to delete tweet</string>
+    <string name="command_user_add_to_reply">Add to reply</string>
 </resources>
