--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,7 +109,7 @@
     <string name="command_status_fav_and_rt">Retweet and favorite</string>
     <string name="command_status_quote">Quote</string>
     <string name="command_status_clipboard">Copy to clipboard</string>
-    <string name="command_status_share">"Share..."</string>
+    <string name="command_status_share">"Share"</string>
     <string name="command_status_open_in_browser">Open in browser</string>
     <string name="command_status_nanigaja">What\'s xxx</string>
     <string name="format_status_command_nanigaja">What\'s %s</string>
@@ -124,4 +124,6 @@
     <string name="notice_status_delete_failed">Failed to delete tweet</string>
     <string name="command_user_add_to_reply">Add to reply</string>
     <string name="command_user_open_favstar">Open favstar</string>
+    <string name="command_user_open_aclog">Open aclog</string>
+    <string name="command_user_open_twilog">Open twilog</string>
 </resources>
