--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -138,4 +138,7 @@
     <string name="command_user_unblock">Unblock</string>
     <string name="notice_unblock_succeeded">Succeeded to unblock</string>
     <string name="notice_unblock_failed">Failed to unblock</string>
+    <string name="command_user_r4s">Report for spam</string>
+    <string name="notice_r4s_succeeded">Succeeded to report</string>
+    <string name="notice_r4s_failed">Failed to report</string>
 </resources>
