--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -141,4 +141,5 @@
     <string name="command_user_r4s">スパム報告</string>
     <string name="notice_r4s_succeeded">スパム報告しました</string>
     <string name="notice_r4s_failed">スパム報告に失敗しました</string>
+    <string name="command_user_introduce">Introduce to everyone</string>
 </resources>
