--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -142,4 +142,10 @@
     <string name="notice_r4s_succeeded">スパム報告しました</string>
     <string name="notice_r4s_failed">スパム報告に失敗しました</string>
     <string name="command_user_introduce">みんなに紹介する</string>
+    <string name="command_message_delete">削除</string>
+    <string name="notice_message_delete_succeeded">削除しました</string>
+    <string name="notice_message_delete_failed">削除に失敗しました</string>
+    <string name="command_user_send_message">ダイレクトメッセージ</string>
+    <string name="notice_message_send_succeeded">DMを送信しました</string>
+    <string name="notice_message_send_failed">DMの送信に失敗しました</string>
 </resources>
