--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,9 +129,9 @@
     <string name="command_user_follow">Follow</string>
     <string name="notice_follow_succeeded">Succeeded to follow</string>
     <string name="notice_follow_failed">Failed to follow</string>
+    <string name="command_user_unfollow">Unfollow</string>
     <string name="notice_unfollow_succeeded">Succeeded to Unfollow</string>
     <string name="notice_unfollow_failed">Failed to unfollow</string>
-    <string name="command_user_unfollow">Unfollow</string>
     <string name="command_user_block">Block</string>
     <string name="notice_block_succeeded">Succeeded to block</string>
     <string name="notice_block_failed">Failed to block</string>
@@ -142,4 +142,10 @@
     <string name="notice_r4s_succeeded">Succeeded to report</string>
     <string name="notice_r4s_failed">Failed to report</string>
     <string name="command_user_introduce">Introduce to everyone</string>
+    <string name="command_message_delete">Delete</string>
+    <string name="notice_message_delete_succeeded">Succeeded to delete message</string>
+    <string name="notice_message_delete_failed">Failed to delete message</string>
+    <string name="command_user_send_message">Send a direct message</string>
+    <string name="notice_message_send_succeeded">Succeeded to send the message</string>
+    <string name="notice_message_send_failed">Failed to send the message</string>
 </resources>
