Add CommandOpenUserDialog (not completed)

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -148,4 +148,6 @@
     <string name="command_user_send_message">Send a direct message</string>
     <string name="notice_message_send_succeeded">Succeeded to send the message</string>
     <string name="notice_message_send_failed">Failed to send the message</string>
+    <string name="dialog_message_now_loading">Now loading…</string>
+    <string name="notice_error_show_user">Can\'t show this user</string>
 </resources>
