--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -148,4 +148,6 @@
     <string name="command_user_send_message">ダイレクトメッセージ</string>
     <string name="notice_message_send_succeeded">DMを送信しました</string>
     <string name="notice_message_send_failed">DMの送信に失敗しました</string>
+    <string name="dialog_message_now_loading">読み込み中…</string>
+    <string name="notice_error_show_user">ユーザーを表示できませんでした</string>
 </resources>
