--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -40,7 +40,11 @@
     <string name="page_name_messages">メッセージ</string>
     <string name="page_name_history">通知</string>
     <string name="actionbar_add">ページを追加</string>
-    <string name="actionbar_setting">設定</string>
+    <string name="actionbar_settings">設定</string>
+    <string name="actionbar_setting">アプリ設定</string>
+    <string name="actionbar_edit_templates">定型文設定</string>
+    <string name="actionbar_edit_extraction">抽出設定</string>
+    <string name="actionbar_edit_commands">コマンド設定</string>
     <string name="actionbar_services">外部サイト</string>
     <string name="actionbar_report">作者に連絡</string>
     <string name="actionbar_favstar">Favstar</string>
