--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -156,4 +156,5 @@
     <string name="actionbar_edit_templates">Edit templates</string>
     <string name="actionbar_edit_extraction">Edit extraction</string>
     <string name="actionbar_edit_commands">Edit commands</string>
+    <string name="text_message_to_author">" #SmileEssence @laco0416 [%s]"</string>
 </resources>
