--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -162,4 +162,5 @@
     <string name="dialog_title_add">新規作成</string>
     <string name="alert_dialog_cancel">キャンセル</string>
     <string name="activity_setting">アプリ設定</string>
+    <string name="activity_edit_extraction">抽出設定</string>
 </resources>
