--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -163,4 +163,6 @@
     <string name="alert_dialog_cancel">キャンセル</string>
     <string name="activity_setting">アプリ設定</string>
     <string name="activity_edit_extraction">抽出設定</string>
+    <string name="actionbar_edit_command_all_on">Enable all</string>
+    <string name="activity_edit_command">コマンド設定</string>
 </resources>
