--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -165,4 +165,7 @@
     <string name="activity_edit_extraction">Extraction Setting</string>
     <string name="actionbar_edit_command_all_on">Enable all</string>
     <string name="activity_edit_command">Command Setting</string>
+    <string name="notice_error_get_home">Failed to get home timeline</string>
+    <string name="notice_error_get_mentions">Failed to get mentions</string>
+    <string name="notice_error_get_messages">Failed to get direct messages</string>
 </resources>
