--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -174,4 +174,5 @@
     <string name="notice_stream_disconnect">切断しました</string>
     <string name="notice_error_authenticate_request">認証の準備に失敗しました。インターネット接続を確認して下さい</string>
     <string name="notice_timeline_new">%s件の新着があります</string>
+    <string name="command_status_add_to_reply">返信に追加</string>
 </resources>
