--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -181,4 +181,9 @@
     <string name="user_detail_favorites">Favorites</string>
     <string name="user_detail_protected">Protected</string>
     <string name="user_detail_follow">Follow</string>
+    <string name="user_detail_followed_is_me">This is you</string>
+    <string name="user_detail_unfollow">Unfollow</string>
+    <string name="user_detail_followed">フォローされています</string>
+    <string name="user_detail_not_followed">フォローされていません</string>
+    <string name="user_detail_loading">Loading</string>
 </resources>
